# my-ocr

./: .gitignore  AGENT.md  Makefile  Modelfile  NEXT_TESTS.md  README.md  pyproject.toml  review.md  test_fail.txt
.agents/skills/universal-dev-mcp-skill/: README.md  SKILL.md
.dev-mcp/feedback/20260417T120039Z--publicwatermassmailing-20260417T095654Z/: manifest.json
.dev-mcp/feedback/20260417T123212Z--publicwatermassmailing-20260417T095654Z/: manifest.json
.dev-mcp/feedback/20260417T131711Z--publicwatermassmailing-mcp-20260417T145850Z/: manifest.json
.dev-mcp/feedback/20260417T162912Z--publicwatermassmailing-20260417T161152Z/: manifest.json
.dev-mcp/feedback/20260417T163319Z--publicwatermassmailing-20260417T161152Z/: manifest.json
.dev-mcp/feedback/20260417T164428Z--publicwatermassmailing-20260417T161152Z/: manifest.json
.dev-mcp/feedback/20260417T165844Z--publicwatermassmailing-20260417T161152Z/: manifest.json
.playwright-mcp/: page-2026-04-17T16-25-11-423Z.yml  page-2026-04-17T16-25-57-804Z.yml  page-2026-04-17T16-57-34-891Z.yml
.sisyphus/: ralph-loop.local.md
config/: local.yaml
docs/: pipeline-refactor-plan.md
src/free_doc_extract/: __init__.py  cli.py  evaluate.py  extract_glmocr.py  extract_rules.py  ingest.py  ocr.py  ocr_fallback.py  ollama_client.py  paths.py  review_artifacts.py  schema.py  settings.py  workflows.py
src/free_doc_extract/experimental/: __init__.py  extract_glmocr.py
src/free_doc_extract/ui/: __init__.py  __main__.py  app.py  run_repository.py  session.py  state.py  theme.py
src/my_ocr/: __init__.py  artifact_store.py  bootstrap.py  cli.py  evaluate.py  filesystem.py  layout_profile.py  models.py  normalize.py  ocr_fallback.py  page_identity.py  run_layout.py  run_manifest.py  settings.py  storage.py  text_normalization.py  utils.py  workflow.py
src/my_ocr/application/: artifacts.py  dto.py  errors.py  models.py  ports.py  results.py  workflow.py
src/my_ocr/domain/: __init__.py  _base.py  artifacts.py  document.py  errors.py  layout.py  ocr.py  options.py  page_identity.py  results.py  review.py  review_layout.py  run.py  text.py
src/my_ocr/experimental/: __init__.py
src/my_ocr/extraction/: __init__.py  canonical.py  evaluation.py  ollama_structured.py  parse_json.py  rules.py  structured.py  structured_prompt.py  validation.py
src/my_ocr/inference/: __init__.py  contracts.py  ollama.py  openai_compatible.py
src/my_ocr/ingest/: __init__.py  normalize.py
src/my_ocr/ocr/: __init__.py  bbox.py  fallback.py  glmocr.py  glmocr_artifacts.py  glmocr_parser.py  glmocr_retry.py  glmocr_review.py  glmocr_runtime.py  glmocr_sdk.py  labels.py  layout_blocks.py  ocr_policy.py  ollama_client.py  page_processor.py  planning.py  review_layout.py  review_mapping.py  run_paths.py  scratch_paths.py  (+1 more)
stitch_ergonomic_studio_prd/document_review_workspace/: code.html
stitch_ergonomic_studio_prd/results_screen/: code.html
stitch_ergonomic_studio_prd/upload_screen/: code.html
tests/: __init__.py  conftest.py  support.py  test_architecture.py  test_bootstrap.py  test_cli.py  test_dev_mcp.py  test_evaluate.py  test_extract_glmocr.py  test_extract_rules.py  test_extraction_validation.py  test_inference_adapters.py  test_ingest.py  test_layout_profile.py  test_ocr.py  test_ollama_client.py  test_schema.py  test_settings.py  test_smoke_pipeline.py  test_ui_bbox_editor.py  test_ui_doc_viewer.py  test_ui_flow.py  test_ui_image_utils.py  test_ui_run_repository.py  test_ui_split_pane.py  test_ui_state.py  test_ui_zoom.py  test_workflows.py
tools/dev_mcp/: AGENTS.snippet.md  README.md  __init__.py  __main__.py  app.py  codex.mcp.example.json  config.py  services.py
(+137 files in other folders)
