[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "free-doc-extract"
version = "0.1.0"
description = "Local OCR and structured document extraction with GLM-OCR and Ollama"
readme = "README.md"
requires-python = ">=3.11,<3.14"
authors = [
  { name = "OpenAI Assistant" }
]
dependencies = [
  "Pillow>=12.2.0",
  "PyYAML>=6.0.3",
]

[dependency-groups]
dev = [
  "flet>=0.84.0",
  "pytest>=9.0.3",
  "ruff>=0.15.10",
]
dev-mcp = [
  "mcp>=1.12.4",
  "playwright>=1.55.0",
  "starlette>=0.48.0",
  "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = [
  "flet>=0.84.0",
  "pytest>=9.0.3",
  "ruff>=0.15.10",
]
dev-mcp = [
  "mcp>=1.12.4",
  "playwright>=1.55.0",
  "starlette>=0.48.0",
  "uvicorn>=0.35.0",
]
pdf = [
  "PyMuPDF>=1.24",
]
glmocr = [
  "glmocr[selfhosted]",
]
ui = [
  "flet>=0.84.0",
]

[project.scripts]
free-doc-extract-ui = "free_doc_extract.ui:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
